fix: logo position mobile

--- a/themes/kinder/styles/section.header.scss
+++ b/themes/kinder/styles/section.header.scss
@@ -138,6 +138,7 @@
 
     @media (width <= 769px) {
       display: grid;
+      grid-template-areas: "menu logo actions" !important;
       grid-template-columns: auto auto 1fr !important;
       padding-inline: var(--spacing-24);
 
